--- a/project/sentry.properties
+++ b/project/sentry.properties
@@ -1,2 +1,2 @@
 
-sentry.uri = "https://3e0cf5f4808543c78f7b983210b426d1@sentry.kinoplan.tech/60"
+dsn = https://3e0cf5f4808543c78f7b983210b426d1@sentry.kinoplan.tech/60
