--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,4 +2,14 @@
 
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
-mongodb.uri = "mongodb://localhost:27017/toDoList_db"
+slick.dbs.default {
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    driver = "org.postgresql.Driver"
+    url="jdbc:postgres://localhost:5433/tasks_db"
+    user=postgres
+    password=postgres
+    numThreads=20
+    maxConnections=20
+  }
+}
